[gd_scene load_steps=25 format=3 uid="uid://0c86sankb0mq"]

[ext_resource type="Script" uid="uid://cd4j8lcqx5wja" path="res://scripts/player/Player.gd" id="1_3v2ag"]
[ext_resource type="SpriteFrames" uid="uid://60jyjtnuvjxc" path="res://assets/sprites/player/player_move.tres" id="2_60mlk"]
[ext_resource type="SpriteFrames" uid="uid://cchqdtdhgt4v3" path="res://assets/sprites/player/player_sword.tres" id="3_i4ail"]
[ext_resource type="Script" uid="uid://dat0r3t8b5yos" path="res://scripts/player/sword_attack.gd" id="4_fulsm"]
[ext_resource type="Script" uid="uid://civdeekxr1yxg" path="res://scripts/player/StateMachine/Attack/Idle.gd" id="10_jej6c"]
[ext_resource type="Script" uid="uid://cdhfv55rgvaij" path="res://scripts/player/StateMachine/Movement/TransformState.gd" id="11_a8ls1"]
[ext_resource type="Script" uid="uid://dy3opcqumevub" path="res://scripts/player/StateMachine/Attack/FirstAttack.gd" id="11_f1ej7"]
[ext_resource type="Script" uid="uid://c3oa0c4xfob66" path="res://scripts/player/StateMachine/Attack/SecondAttack.gd" id="12_oprun"]
[ext_resource type="Script" uid="uid://dq5lneqno43l4" path="res://scripts/player/StateMachine/Movement/DeathState.gd" id="12_qfm1y"]
[ext_resource type="Script" uid="uid://7avvqe0b6oa6" path="res://scripts/player/StateMachine/StateMachine.gd" id="13_f1ej7"]
[ext_resource type="Script" uid="uid://esfpvjk27api" path="res://scripts/player/StateMachine/Movement/HitState.gd" id="14_60mlk"]
[ext_resource type="Script" uid="uid://b85ob4c7uieu5" path="res://scripts/player/StateMachine/Attack/JumpAttack.gd" id="14_a8ls1"]
[ext_resource type="Script" uid="uid://caqbpviiwa6ux" path="res://scripts/player/StateMachine/Movement/IdleState.gd" id="14_oprun"]
[ext_resource type="Script" uid="uid://cuyumjtdv2rfx" path="res://scripts/player/StateMachine/Movement/JumpState.gd" id="15_oprun"]
[ext_resource type="Script" uid="uid://behc1emmgypyf" path="res://scripts/player/StateMachine/Movement/FallState.gd" id="16_a8ls1"]
[ext_resource type="Script" uid="uid://dn7twxpd7mgwv" path="res://scripts/player/StateMachine/Movement/DashState.gd" id="17_qfm1y"]
[ext_resource type="Script" uid="uid://c0mjs7cs6bqrc" path="res://scripts/player/StateMachine/Attack/ThirdAttack.gd" id="18_4r5pv"]
[ext_resource type="Script" uid="uid://djhcc6mius7mo" path="res://scripts/player/StateMachine/Movement/MoveState.gd" id="18_fulsm"]
[ext_resource type="Script" uid="uid://ddobhpf82ecln" path="res://scripts/player/StateMachine/Movement/DoubleJumpState.gd" id="19_4r5pv"]
[ext_resource type="Script" uid="uid://dkq1crtk6x5jr" path="res://scripts/player/MoveComponent.gd" id="20_60mlk"]
[ext_resource type="PackedScene" uid="uid://20xbjiy7rthm" path="res://scenes/gui/hud.tscn" id="21_i4ail"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jej6c"]
radius = 2.4
height = 8.8

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e4c5e"]
radius = 13.0
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_60mlk"]
radius = 13.0

[node name="player" type="CharacterBody2D" node_paths=PackedStringArray("death_state", "hit_state")]
collision_layer = 3
script = ExtResource("1_3v2ag")
death_state = NodePath("move_state_machine/death")
hit_state = NodePath("move_state_machine/hit")

[node name="animation" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = ExtResource("2_60mlk")
animation = &"fire_fall"

[node name="sword_animation" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("3_i4ail")
animation = &"attack1"

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(5, 5)
shape = SubResource("CapsuleShape2D_jej6c")

[node name="sword_collision" type="Area2D" parent="." node_paths=PackedStringArray("parent")]
collision_layer = 2
collision_mask = 2
script = ExtResource("4_fulsm")
parent = NodePath("..")

[node name="attack1" type="CollisionShape2D" parent="sword_collision"]
position = Vector2(23, -3)
shape = SubResource("CapsuleShape2D_e4c5e")
disabled = true
debug_color = Color(0.576471, 0.411765, 0.937255, 1)

[node name="attack2" type="CollisionPolygon2D" parent="sword_collision"]
position = Vector2(1, 0)
polygon = PackedVector2Array(5, 4, 44, 15, 40, -15, 15, -29, -12, -32, 22, -16, 25, 2)
disabled = true

[node name="attack3" type="CollisionPolygon2D" parent="sword_collision"]
polygon = PackedVector2Array(58, 2, 13, -5, 10, 11, 57, 5)
disabled = true

[node name="jump_attack" type="CollisionShape2D" parent="sword_collision"]
position = Vector2(19, -7)
shape = SubResource("CapsuleShape2D_60mlk")
disabled = true
debug_color = Color(0.75647, 0.452721, 0.119699, 0.42)

[node name="move_state_machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("13_f1ej7")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="move_state_machine" node_paths=PackedStringArray("jump_state", "fall_state", "move_state", "dash_state", "transform")]
script = ExtResource("14_oprun")
jump_state = NodePath("../jump")
fall_state = NodePath("../fall")
move_state = NodePath("../move")
dash_state = NodePath("../dash")
transform = NodePath("../transform")
animation_name = "idle"
fire_animation_name = "fire_idle"

[node name="jump" type="Node" parent="move_state_machine" node_paths=PackedStringArray("fall_state", "idle_state", "move_state", "double_jump_state", "dash_state")]
script = ExtResource("15_oprun")
fall_state = NodePath("../fall")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
double_jump_state = NodePath("../double_jump")
dash_state = NodePath("../dash")
animation_name = "jump"
fire_animation_name = "fire_jump"
move_speed = 150.0

[node name="fall" type="Node" parent="move_state_machine" node_paths=PackedStringArray("double_jump_state", "idle_state", "move_state", "dash_state", "transform_state", "jump_state")]
script = ExtResource("16_a8ls1")
double_jump_state = NodePath("../double_jump")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
dash_state = NodePath("../dash")
transform_state = NodePath("../transform")
jump_state = NodePath("../jump")
animation_name = "fall"
fire_animation_name = "fire_fall"
move_speed = 150.0

[node name="dash" type="Node" parent="move_state_machine" node_paths=PackedStringArray("move_state", "fall_state", "idle_state", "jump_state", "transform_state")]
script = ExtResource("17_qfm1y")
move_state = NodePath("../move")
dash_time = 0.25
fall_state = NodePath("../fall")
idle_state = NodePath("../idle")
jump_state = NodePath("../jump")
transform_state = NodePath("../transform")
animation_name = "dash"
fire_animation_name = "fire_dash"
move_speed = 450.0

[node name="move" type="Node" parent="move_state_machine" node_paths=PackedStringArray("fall_state", "idle_state", "jump_state", "dash_state", "transform_state")]
script = ExtResource("18_fulsm")
fall_state = NodePath("../fall")
idle_state = NodePath("../idle")
jump_state = NodePath("../jump")
dash_state = NodePath("../dash")
transform_state = NodePath("../transform")
animation_name = "run"
fire_animation_name = "fire_run"

[node name="double_jump" type="Node" parent="move_state_machine" node_paths=PackedStringArray("fall_state", "move_state", "idle_state", "dash_state")]
script = ExtResource("19_4r5pv")
fall_state = NodePath("../fall")
move_state = NodePath("../move")
idle_state = NodePath("../idle")
dash_state = NodePath("../dash")
animation_name = "jump"
fire_animation_name = "fire_jump"
move_speed = 150.0

[node name="transform" type="Node" parent="move_state_machine" node_paths=PackedStringArray("idle", "jump_state", "fall_state", "move_state", "dash_state")]
script = ExtResource("11_a8ls1")
idle = NodePath("../idle")
jump_state = NodePath("../jump")
fall_state = NodePath("../fall")
move_state = NodePath("../move")
dash_state = NodePath("../dash")
animation_name = "transform"
fire_animation_name = "fire_transform"

[node name="death" type="Node" parent="move_state_machine"]
script = ExtResource("12_qfm1y")
animation_name = "death"
fire_animation_name = "fire_death"

[node name="hit" type="Node" parent="move_state_machine" node_paths=PackedStringArray("idle", "jump_state", "fall_state", "move_state", "dash_state", "transform")]
script = ExtResource("14_60mlk")
idle = NodePath("../../attack_state_machine/idle")
jump_state = NodePath("../jump")
fall_state = NodePath("../fall")
move_state = NodePath("../dash")
dash_state = NodePath("../dash")
transform = NodePath("../transform")
animation_name = "hit"
fire_animation_name = "fire_hit"
move_speed = 10.0

[node name="attack_state_machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("13_f1ej7")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="attack_state_machine" node_paths=PackedStringArray("attack1", "jump_attack")]
script = ExtResource("10_jej6c")
attack1 = NodePath("../attack1")
jump_attack = NodePath("../jump_attack")
animation_name = "idle"
fire_animation_name = "fire_idle"

[node name="attack1" type="Node" parent="attack_state_machine" node_paths=PackedStringArray("attack2", "jump_attack", "idle")]
script = ExtResource("11_f1ej7")
attack2 = NodePath("../attack2")
jump_attack = NodePath("../jump_attack")
idle = NodePath("../idle")
attack_buffer_time = 0.2
animation_name = "attack1"
fire_animation_name = "fire_attack1"
move_speed = 100.0

[node name="attack2" type="Node" parent="attack_state_machine" node_paths=PackedStringArray("attack3", "jump_attack", "idle")]
script = ExtResource("12_oprun")
attack3 = NodePath("../attack3")
jump_attack = NodePath("../jump_attack")
idle = NodePath("../idle")
attack_buffer_time = 0.2
animation_name = "attack2"
fire_animation_name = "fire_attack2"

[node name="attack3" type="Node" parent="attack_state_machine" node_paths=PackedStringArray("jump_attack", "idle")]
script = ExtResource("18_4r5pv")
jump_attack = NodePath("../jump_attack")
idle = NodePath("../idle")
animation_name = "attack3"
fire_animation_name = "fire_attack3"

[node name="jump_attack" type="Node" parent="attack_state_machine" node_paths=PackedStringArray("idle", "attack1")]
script = ExtResource("14_a8ls1")
idle = NodePath("../idle")
attack1 = NodePath("../attack1")
animation_name = "jump_attack"
fire_animation_name = "fire_jump_attack"

[node name="input_component" type="Node" parent="."]
script = ExtResource("20_60mlk")

[node name="dash_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="HUD" parent="." instance=ExtResource("21_i4ail")]
offset_left = 520.0
offset_top = 340.0
offset_right = 520.0
offset_bottom = 340.0

[connection signal="animation_finished" from="animation" to="." method="_on_animation_death_finished" flags=6]
[connection signal="animation_finished" from="animation" to="move_state_machine/transform" method="_on_animation_transform_finished"]
[connection signal="animation_finished" from="animation" to="move_state_machine/hit" method="_on_animation_hit_finished"]
[connection signal="animation_finished" from="sword_animation" to="attack_state_machine/attack1" method="_on_animation_attack1_finished"]
[connection signal="animation_finished" from="sword_animation" to="attack_state_machine/attack2" method="_on_animation_attack2_finished"]
[connection signal="animation_finished" from="sword_animation" to="attack_state_machine/attack3" method="_on_animation_attack3_finished"]
[connection signal="animation_finished" from="sword_animation" to="attack_state_machine/jump_attack" method="_on_animation_jump_attack_finished"]
[connection signal="area_entered" from="sword_collision" to="sword_collision" method="_on_area_entered"]
[connection signal="body_entered" from="sword_collision" to="sword_collision" method="_on_body_entered"]
[connection signal="timeout" from="dash_cooldown" to="." method="_on_dash_cooldown_timeout"]
